# kaggle-otto-3rd-place-solution

./: README.md
alvor/: FE.ipynb  FE_aids2sessions.ipynb  FE_items.ipynb  FE_sessions.ipynb  LICENSE  README.md  directory_structure.txt  handle_sirius_features.ipynb  make_submission.ipynb  make_submission_two.ipynb  make_train_df.ipynb  otto_utils.py  train_model_carts_orders.ipynb  train_model_carts_orders_two.ipynb  train_model_clicks.ipynb  train_model_clicks_two.ipynb  w2v.ipynb
alvor/models/: lgb_clicks_2000_tr_16_lv_gbdt_fold_0_0.9412_0.546593.pkl  lgb_clicks_2000_tr_16_lv_gbdt_fold_1_0.9412_0.546626.pkl  lgb_clicks_2000_tr_16_lv_gbdt_fold_2_0.9413_0.547215.pkl  (+3 more)
shimacos/: README.md  check_cv.py  docker-compose.yaml  main_cat.py  main_lgbm.py  predict.py  pyproject.toml  stacking_cat.py  stacking_lgbm.py
shimacos/images/: Dockerfile.cuda11
shimacos/queries/: bq.py  main.py
shimacos/queries/067/: dataset.sql  sampled_dataset.sql  user_item.sql
shimacos/queries/069/: dataset.sql  user_item.sql
shimacos/queries/candidates_018/: cart_order2cart_order_covisit_1hour.sql  click2click_covisit_1hour.sql  covisit_bigram_v2.sql  covisit_items_1days.sql  covisit_items_1hour.sql  covisit_items_window_size5_v3.sql  covisit_items_window_size5_v4.sql  word2vec_min_count5_window5_sg.sql
shimacos/queries/feature_006/: aid_feature.sql  aid_hour_feature.sql  aid_repeat_feature.sql  latest_user_items_feature.sql  session_aid_feature_v2.sql  session_aid_feature_v3.sql  session_aid_vector_feature_067_bpr.sql  session_aid_vector_feature_067_last.sql  session_aid_vector_feature_067_last_cart.sql  session_aid_vector_feature_067_last_order.sql  session_feature.sql
shimacos/queries/preprocess_003/: test_session_ids.sql  valid_session_ids.sql
shimacos/queries/stacking_010/: test_dataset.sql  train_dataset.sql
shimacos/queries/test_result/: convert_makotu_v3_data.sql  convert_makotu_v4_data.sql
shimacos/scripts/: blending.py  bpr.py  node2vec.py  upload_alvor_dataset.py  upload_dataset.py  upload_makotu_dataset.py  upload_sirius_dataset.py  word2vec.py
shimacos/src/: metrics.py  utils.py
shimacos/src/factories/: __init__.py  tree_factory.py
shimacos/yamls/: sql.yaml  stacking.yaml  tree.yaml
(+6 files in other folders)
